clusters/homelab/apps/openwebui/istio-system-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: openwebui
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: openwebui-tls
    hosts:
    - ai.${PUBLIC_DOMAIN}
